RealMysql/6. 실행 계획.md updated from https://stackedit.io/

--- a/RealMysql/6. 실행 계획.md
+++ b/RealMysql/6. 실행 계획.md
@@ -205,7 +205,7 @@ SELECT * FROM dept_emo WHERE from_date>='2002-07-01';
 * **Impossible WHERE (MySQL 5.1부터)**
 	* Impossible HAVING과 비슷. WHERE 조건이 항상 FALSE가 될 수 밖에 없는 경우 표시.
 * **Impossible WHERE noticed after reading const tables**
-	* d
+	* 위의 경우 실제 데이터를 읽어보지 않은 경우에도 알 수 있는 정보라면 해당 키워드는 데이터를 읽어보고 WHERE 조건이 항상 FALSE가 되는 경우 출력된다.
 	* 
 * **No matching min/max row (MySQL 5.1부터)**
 * **
@@ -217,11 +217,11 @@ SELECT * FROM dept_emo WHERE from_date>='2002-07-01';
 ### 6.2.12 EXPLAIN EXTENDED(추가 옵티마이저 정보)
 ### 6.2.13 EXPLAIN PARTITIONS(Partitions 칼럼)
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTE0OTUyMTQzODAsMTA4NTk4NjY2LC0xOD
-E1ODMzOTE0LDIwMTQxNjc5NTgsLTE3MDc5ODUwMzQsLTE2ODAy
-NjQ4MDMsLTc0MjEzNjA1MywtODkxMjc0MTQ3LDE1MTU5NjY1OT
-AsMTM2MjkzNjU4OCwxNDE0NTI2MzY1LDEzMTQzMzEyNDksMTg3
-OTk5NDU1MywtMTQ5MDI0ODc2NCwtMTcyNzU3NDQ0MSwxNTQwOD
-gxODQxLDEwNzcwMzYxMDgsLTEwNTkzODU0NCw4MjQ5ODUwOTcs
-MTI5NDA2MDM3N119
+eyJoaXN0b3J5IjpbMTYxMjE2Njg5OCwxMDg1OTg2NjYsLTE4MT
+U4MzM5MTQsMjAxNDE2Nzk1OCwtMTcwNzk4NTAzNCwtMTY4MDI2
+NDgwMywtNzQyMTM2MDUzLC04OTEyNzQxNDcsMTUxNTk2NjU5MC
+wxMzYyOTM2NTg4LDE0MTQ1MjYzNjUsMTMxNDMzMTI0OSwxODc5
+OTk0NTUzLC0xNDkwMjQ4NzY0LC0xNzI3NTc0NDQxLDE1NDA4OD
+E4NDEsMTA3NzAzNjEwOCwtMTA1OTM4NTQ0LDgyNDk4NTA5Nywx
+Mjk0MDYwMzc3XX0=
 -->
