RealMysql/6. 실행 계획.md updated from https://stackedit.io/

--- a/RealMysql/6. 실행 계획.md
+++ b/RealMysql/6. 실행 계획.md
@@ -206,9 +206,10 @@ SELECT * FROM dept_emo WHERE from_date>='2002-07-01';
 	* Impossible HAVING과 비슷. WHERE 조건이 항상 FALSE가 될 수 밖에 없는 경우 표시.
 * **Impossible WHERE noticed after reading const tables**
 	* 위의 경우 실제 데이터를 읽어보지 않은 경우에도 알 수 있는 정보라면 해당 키워드는 데이터를 읽어보고 WHERE 조건이 항상 FALSE가 되는 경우 출력된다.
-	* 앞서 type이 const인 실행 계획은 옵티마이저가 쿼리를 최적화하는 단계에서 옵티마이저가 직접 쿼리의 일부를 실행하고 상수화 한다고 했다. 즉 이과정에서 데이터를 읽업
+	* 앞서 *"type이 const인 실행 계획은 옵티마이저가 쿼리를 최적화하는 단계에서 옵티마이저가 직접 쿼리의 일부를 실행하고 상수화 한다"* 고 했다. 즉 이과정에서 데이터를 읽어보고 WHERE 조건이 항상 FALSE인지를 판단한다.
 * **No matching min/max row (MySQL 5.1부터)**
-* **
+	* 
+* **no matching row in const 
 * **
 * **
 * **
@@ -217,7 +218,7 @@ SELECT * FROM dept_emo WHERE from_date>='2002-07-01';
 ### 6.2.12 EXPLAIN EXTENDED(추가 옵티마이저 정보)
 ### 6.2.13 EXPLAIN PARTITIONS(Partitions 칼럼)
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbMjA2ODEyNDE3MCwxMDg1OTg2NjYsLTE4MT
+eyJoaXN0b3J5IjpbMTA5MzY5NjYyOSwxMDg1OTg2NjYsLTE4MT
 U4MzM5MTQsMjAxNDE2Nzk1OCwtMTcwNzk4NTAzNCwtMTY4MDI2
 NDgwMywtNzQyMTM2MDUzLC04OTEyNzQxNDcsMTUxNTk2NjU5MC
 wxMzYyOTM2NTg4LDE0MTQ1MjYzNjUsMTMxNDMzMTI0OSwxODc5
