RealMysql/6. 실행 계획.md updated from https://stackedit.io/

--- a/RealMysql/6. 실행 계획.md
+++ b/RealMysql/6. 실행 계획.md
@@ -209,20 +209,20 @@ SELECT * FROM dept_emo WHERE from_date>='2002-07-01';
 	* 앞서 *"type이 const인 실행 계획은 옵티마이저가 쿼리를 최적화하는 단계에서 옵티마이저가 직접 쿼리의 일부를 실행하고 상수화 한다"* 고 했다. 즉 이과정에서 데이터를 읽어보고 WHERE 조건이 항상 FALSE인지를 판단한다.
 * **No matching min/max row (MySQL 5.1부터)**
 	* 
-* **no matching row in const 
-* **
-* **
+* **no matching row in const table (MySQL 5.1부터)**
+* **No tables used (MySQL 5.0의 "No tables"에서 키워드 변경됨)**
+* **Not exists**
 * **
 * **
 ### 6.2.11 EXPLAIN EXTENDED(Filterd 칼럼)
 ### 6.2.12 EXPLAIN EXTENDED(추가 옵티마이저 정보)
 ### 6.2.13 EXPLAIN PARTITIONS(Partitions 칼럼)
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbMTA5MzY5NjYyOSwxMDg1OTg2NjYsLTE4MT
-U4MzM5MTQsMjAxNDE2Nzk1OCwtMTcwNzk4NTAzNCwtMTY4MDI2
-NDgwMywtNzQyMTM2MDUzLC04OTEyNzQxNDcsMTUxNTk2NjU5MC
-wxMzYyOTM2NTg4LDE0MTQ1MjYzNjUsMTMxNDMzMTI0OSwxODc5
-OTk0NTUzLC0xNDkwMjQ4NzY0LC0xNzI3NTc0NDQxLDE1NDA4OD
-E4NDEsMTA3NzAzNjEwOCwtMTA1OTM4NTQ0LDgyNDk4NTA5Nywx
-Mjk0MDYwMzc3XX0=
+eyJoaXN0b3J5IjpbNTM1MjA2ODY3LDEwODU5ODY2NiwtMTgxNT
+gzMzkxNCwyMDE0MTY3OTU4LC0xNzA3OTg1MDM0LC0xNjgwMjY0
+ODAzLC03NDIxMzYwNTMsLTg5MTI3NDE0NywxNTE1OTY2NTkwLD
+EzNjI5MzY1ODgsMTQxNDUyNjM2NSwxMzE0MzMxMjQ5LDE4Nzk5
+OTQ1NTMsLTE0OTAyNDg3NjQsLTE3Mjc1NzQ0NDEsMTU0MDg4MT
+g0MSwxMDc3MDM2MTA4LC0xMDU5Mzg1NDQsODI0OTg1MDk3LDEy
+OTQwNjAzNzddfQ==
 -->
