RealMysql/12. 쿼리 종류별 잠금.md updated from https://stackedit.io/

--- a/RealMysql/12. 쿼리 종류별 잠금.md
+++ b/RealMysql/12. 쿼리 종류별 잠금.md
@@ -288,7 +288,10 @@ INSERT INTO tb_test VALEUS (4);
 * truncate 이슈.
 
 ## 6. InnoDB에서 여러 쿼리 패턴 간의 lock wait
-
+* 두 개 트랜잭션이 상호 잠금 대기를 유발하는 과정 비교
+	* 선행 트랜잭션 : UPDATE 실행 -> 레코드 lock -> COMMIT 수행 전
+	* 후행 트랜잭션 : INSERT, UPDATE, SELECT를 순차적으로 실행
+* 후행 트랜잭션이 선행 트랜잭션의 잠금 때문에 대기하는 케이스와 아닌 케이스 비교
 
 # 12.3 InnoDB에서 deadlock 만들기
 
@@ -302,5 +305,5 @@ INSERT INTO tb_test VALEUS (4);
 
 
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTMzNzk3MDI3NF19
+eyJoaXN0b3J5IjpbMTIyNTM3NTk3NiwtMzM3OTcwMjc0XX0=
 -->
