RealMysql/12. 쿼리 종류별 잠금.md updated from https://stackedit.io/

--- a/RealMysql/12. 쿼리 종류별 잠금.md
+++ b/RealMysql/12. 쿼리 종류별 잠금.md
@@ -293,6 +293,15 @@ INSERT INTO tb_test VALEUS (4);
 	* 후행 트랜잭션 : INSERT, UPDATE, SELECT를 순차적으로 실행
 * 후행 트랜잭션이 선행 트랜잭션의 잠금 때문에 대기하는 케이스와 아닌 케이스 비교
 
+```sql
+CREATE TABLE employees {
+  emp_no INT NOT NULL,
+  last_name VARCHAR(16) DEFAULT NULL,
+  PRIMARY KEY(emp_no)
+);
+INSERT INTO employees VALUES (90, 'Rodham'), (100, 'Piazza'), (110, 'Hockney');
+```
+
 # 12.3 InnoDB에서 deadlock 만들기
 
 ## 패턴1 (상호 거래 관련)
@@ -305,5 +314,5 @@ INSERT INTO tb_test VALEUS (4);
 
 
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbMTIyNTM3NTk3NiwtMzM3OTcwMjc0XX0=
+eyJoaXN0b3J5IjpbLTc0Njc3MTU0NSwtMzM3OTcwMjc0XX0=
 -->
