RealMysql/12. 쿼리 종류별 잠금.md updated from https://stackedit.io/

--- a/RealMysql/12. 쿼리 종류별 잠금.md
+++ b/RealMysql/12. 쿼리 종류별 잠금.md
@@ -301,6 +301,8 @@ CREATE TABLE employees {
 );
 INSERT INTO employees VALUES (90, 'Rodham'), (100, 'Piazza'), (110, 'Hockney');
 ```
+| 선행 트랜잭션 | 후행 트랜잭션 | SBR<br>(RepRead) | SBR(Serial) | RBR(ReadComm) | RBR(RepRead) | RBR(Serial) |
+|--|--|--|--|--|
 
 # 12.3 InnoDB에서 deadlock 만들기
 
@@ -314,5 +316,5 @@ INSERT INTO employees VALUES (90, 'Rodham'), (100, 'Piazza'), (110, 'Hockney');
 
 
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTc0Njc3MTU0NSwtMzM3OTcwMjc0XX0=
+eyJoaXN0b3J5IjpbMTczNjQ4NTkwMCwtMzM3OTcwMjc0XX0=
 -->
