RealMysql/12. 쿼리 종류별 잠금.md updated from https://stackedit.io/

--- a/RealMysql/12. 쿼리 종류별 잠금.md
+++ b/RealMysql/12. 쿼리 종류별 잠금.md
@@ -302,9 +302,12 @@ CREATE TABLE employees {
 INSERT INTO employees VALUES (90, 'Rodham'), (100, 'Piazza'), (110, 'Hockney');
 ```
 
-| 선행 트랜잭션 | 후행 트랜잭션 | SBR<br>(RepRead) | SBR(Serial) | RBR(ReadComm) | RBR(RepRead) | RBR(Serial) |
+| 선행 트랜잭션 | 후행 트랜잭션 | SBR<br>(RepRead) | SBR<br>(Serial) | RBR<br>(ReadCommit) | RBR<br>(RepRead) | RBR<br>(Serial) |
 |--|--|--|--|--|--|--|
-| asdf | 
+| UPDATE employees SET<br>last_name='Lenart'<br>WHERE emp_no=100 | 
+| UPDATE employees SET<br>last_name='Lenart'<br>WHERE emp_no<100 | 
+| UPDATE employees SET<br>last_name='Lenart'<br>WHERE emp_no>100 | 
+| UPDATE employees SET<br>last_name='Lenart'<br>WHERE emp_no<=100 | 
 
 # 12.3 InnoDB에서 deadlock 만들기
 
@@ -318,5 +321,5 @@ INSERT INTO employees VALUES (90, 'Rodham'), (100, 'Piazza'), (110, 'Hockney');
 
 
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbMjEwODIwMzA4LC0zMzc5NzAyNzRdfQ==
+eyJoaXN0b3J5IjpbMTA3NDkxMDEyNywtMzM3OTcwMjc0XX0=
 -->
