RealMysql/12. 쿼리 종류별 잠금.md updated from https://stackedit.io/

--- a/RealMysql/12. 쿼리 종류별 잠금.md
+++ b/RealMysql/12. 쿼리 종류별 잠금.md
@@ -308,6 +308,7 @@ INSERT INTO employees VALUES (90, 'Rodham'), (100, 'Piazza'), (110, 'Hockney');
 | UPDATE employees SET<br>last_name='Lenart'<br>WHERE emp_no<100 | 
 | UPDATE employees SET<br>last_name='Lenart'<br>WHERE emp_no>100 | 
 | UPDATE employees SET<br>last_name='Lenart'<br>WHERE emp_no<=100 | 
+| UPDATE employees SET<br>last_name='Lenart'<br>WHERE emp_no>=100 | 
 
 # 12.3 InnoDB에서 deadlock 만들기
 
@@ -321,5 +322,5 @@ INSERT INTO employees VALUES (90, 'Rodham'), (100, 'Piazza'), (110, 'Hockney');
 
 
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbMTA3NDkxMDEyNywtMzM3OTcwMjc0XX0=
+eyJoaXN0b3J5IjpbMjAyODU1MjM5LC0zMzc5NzAyNzRdfQ==
 -->
