RealMysql/12. 쿼리 종류별 잠금.md updated from https://stackedit.io/

--- a/RealMysql/12. 쿼리 종류별 잠금.md
+++ b/RealMysql/12. 쿼리 종류별 잠금.md
@@ -304,7 +304,11 @@ INSERT INTO employees VALUES (90, 'Rodham'), (100, 'Piazza'), (110, 'Hockney');
 
 | 선행 트랜잭션 | 후행 트랜잭션 | SBR<br>(RepRead) | SBR<br>(Serial) | RBR<br>(ReadCommit) | RBR<br>(RepRead) | RBR<br>(Serial) |
 |--|--|--|--|--|--|--|
-| UPDATE employees SET<br>last_name='Lenart'<br>WHERE emp_no=100 | 
+| UPDATE employees SET<br>last_name='Lenart'<br>WHERE emp_no=100 | SELECT * FROM employees<br>WHERE emp_no=100 |
+| | UPDATE employees<br>SET last_name='Baaz'<br>WHERE emp_no=90
+| | UPDATE employees<br>SET last_name='Baaz'<br>WHERE emp_no=110
+| | INSERT INTO employees<br>VALUES() last_name='Baaz'<br>WHERE emp_no=90
+| | UPDATE employees<br>SET last_name='Baaz'<br>WHERE emp_no=90
 | UPDATE employees SET<br>last_name='Lenart'<br>WHERE emp_no<100 | 
 | UPDATE employees SET<br>last_name='Lenart'<br>WHERE emp_no>100 | 
 | UPDATE employees SET<br>last_name='Lenart'<br>WHERE emp_no<=100 | 
@@ -322,5 +326,5 @@ INSERT INTO employees VALUES (90, 'Rodham'), (100, 'Piazza'), (110, 'Hockney');
 
 
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbMjAyODU1MjM5LC0zMzc5NzAyNzRdfQ==
+eyJoaXN0b3J5IjpbLTk3ODAzMzQxMywtMzM3OTcwMjc0XX0=
 -->
