RealMysql/12. 쿼리 종류별 잠금.md updated from https://stackedit.io/

--- a/RealMysql/12. 쿼리 종류별 잠금.md
+++ b/RealMysql/12. 쿼리 종류별 잠금.md
@@ -321,9 +321,16 @@ INSERT INTO employees VALUES (90, 'Rodham'), (100, 'Piazza'), (110, 'Hockney');
 | | INSERT INTO employees<br>VALUES(101, 'Baaz') | X | X | O(*) | X | X |
 | UPDATE employees SET<br>last_name='Lenart'<br>WHERE emp_no<=100 | SELECT * FROM employees<br>WHERE emp_no<=100 | O | X | O | O | X | 동일
 | | UPDATE employees<br>SET last_name='Baaz'<br>WHERE emp_no=110 | X(*) | X(*) | X(*) | X(*) | X(*) |
+| | INSERT INTO employees<br>VALUES(99, 'Baaz') | X | X | O(*) | X | X |
+| | INSERT INTO employees<br>VALUES(101, 'Baaz') | X(*) | X(*) | O(*) | X(*) | X(*) |
+| UPDATE employees SET<br>last_name='Lenart'<br>WHERE emp_no>=100 | SELECT * FROM employees<br>WHERE emp_no>=100 | O | X | O | O | X | 동일
+| | UPDATE employees<br>SET last_name='Baaz'<br>WHERE emp_no=90 | O | O | O | O | O |
 | | INSERT INTO employees<br>VALUES(99, 'Baaz') | O | O | O | O | O |
-| | INSERT INTO employees<br>VALUES(101, 'Baaz') | X | X | O(*) | X | X |
-| UPDATE employees SET<br>last_name='Lenart'<br>WHERE emp_no>=100 | 
+| | INSERT INTO employees<br>VALUES(101, 'Baaz') | X(*) | X(*) | O(*) | X(*) | X(*) |
+
+* X(*) : 일반 DBMS에는 lock
+* O(*) : 
+
 
 # 12.3 InnoDB에서 deadlock 만들기
 
@@ -337,5 +344,5 @@ INSERT INTO employees VALUES (90, 'Rodham'), (100, 'Piazza'), (110, 'Hockney');
 
 
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbMTE5NjcwODMzLC0zMzc5NzAyNzRdfQ==
+eyJoaXN0b3J5IjpbMTU5NzE5NzQxMiwtMzM3OTcwMjc0XX0=
 -->
