--- a/RealMysql/12. 쿼리 종류별 잠금.md
+++ b/RealMysql/12. 쿼리 종류별 잠금.md
@@ -328,8 +328,12 @@ INSERT INTO employees VALUES (90, 'Rodham'), (100, 'Piazza'), (110, 'Hockney');
 | | INSERT INTO employees<br>VALUES(99, 'Baaz') | O | O | O | O | O |
 | | INSERT INTO employees<br>VALUES(101, 'Baaz') | X(*) | X(*) | O(*) | X(*) | X(*) |
 
-* X(*) : 일반 DBMS에는 lock
-* O(*) : 
+* X(*) 
+	* 일반 DBMS에는 lock이 발생하지 않음.
+	* 그러나 MySQL InnoDB에서는 next-key-lock 발생함.
+* O(*)
+	* next-key-lock 또는 gab-lock 이 발생해야 하지만,
+	* RBR 또는 MIXED 바이너리 로그 포멧과 READ-COMMITTED isolation level을 사용해서 lock wait이 발생하지 않음.
 
 
 # 12.3 InnoDB에서 deadlock 만들기
@@ -344,5 +348,5 @@ INSERT INTO employees VALUES (90, 'Rodham'), (100, 'Piazza'), (110, 'Hockney');
 
 
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbMTU5NzE5NzQxMiwtMzM3OTcwMjc0XX0=
+eyJoaXN0b3J5IjpbMTg0NTM1MTE2NiwtMzM3OTcwMjc0XX0=
 -->
