RealMysql/12. 쿼리 종류별 잠금.md updated from https://stackedit.io/

--- a/RealMysql/12. 쿼리 종류별 잠금.md
+++ b/RealMysql/12. 쿼리 종류별 잠금.md
@@ -337,6 +337,12 @@ INSERT INTO employees VALUES (90, 'Rodham'), (100, 'Piazza'), (110, 'Hockney');
 
 
 # 12.3 InnoDB에서 deadlock 만들기
+* 특징
+	* 다른 DBMS와의 차이점으로 레코드 간격을 잠그는 Gab-lock, next-key-lock이 있다.
+	* 따라서 잠금의 범위가 넓다.
+	* 데드락도 더 자주 발생하는 편이다.
+* 자주 발생하는 상황
+	* shared lock을 가진 상태에서 exclusive lock을 얻으려고 하는 lock upgrade 상황
 
 ## 패턴1 (상호 거래 관련)
 
@@ -348,5 +354,6 @@ INSERT INTO employees VALUES (90, 'Rodham'), (100, 'Piazza'), (110, 'Hockney');
 
 
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbMTg0NTM1MTE2NiwtMzM3OTcwMjc0XX0=
+eyJoaXN0b3J5IjpbMTU1MTkxMDM3MCwxODQ1MzUxMTY2LC0zMz
+c5NzAyNzRdfQ==
 -->
