--- a/RealMysql/12. 쿼리 종류별 잠금.md
+++ b/RealMysql/12. 쿼리 종류별 잠금.md
@@ -343,7 +343,11 @@ INSERT INTO employees VALUES (90, 'Rodham'), (100, 'Piazza'), (110, 'Hockney');
 	* 데드락도 더 자주 발생하는 편이다.
 * 자주 발생하는 상황
 	* shared lock을 가진 상태에서 exclusive lock을 얻으려고 하는 lock upgrade 상황
-
+	* 프로그램에서 하나의 기능이 동시에 병렬로 실행되면서 서로 간섭을 일으키는 경우
+* 아래는 안티 패턴으로 인식하고 가급적 사용하지 말자!
+* lock upgrade
+	* 현재 트랜잭션이 read lock을 가진 상태에서 똑같은 대상 레코드나 간격에 대해서 write lock이 필요한 상황.
+	* lock escalation
 ## 패턴1 (상호 거래 관련)
 
 ## 패턴2 (유니크 인덱스 관련)
@@ -354,6 +358,6 @@ INSERT INTO employees VALUES (90, 'Rodham'), (100, 'Piazza'), (110, 'Hockney');
 
 
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbMTU1MTkxMDM3MCwxODQ1MzUxMTY2LC0zMz
+eyJoaXN0b3J5IjpbMTE3NzIxMzQ2NSwxODQ1MzUxMTY2LC0zMz
 c5NzAyNzRdfQ==
 -->
