--- a/RealMysql/12. 쿼리 종류별 잠금.md
+++ b/RealMysql/12. 쿼리 종류별 잠금.md
@@ -347,7 +347,10 @@ INSERT INTO employees VALUES (90, 'Rodham'), (100, 'Piazza'), (110, 'Hockney');
 * 아래는 안티 패턴으로 인식하고 가급적 사용하지 말자!
 * lock upgrade
 	* 현재 트랜잭션이 read lock을 가진 상태에서 똑같은 대상 레코드나 간격에 대해서 write lock이 필요한 상황.
-	* lock escalation
+	* lock escalation 용어와 혼동될 수 있으나 성격이 다름.
+		* page 단위의 lock으로 SQL을 시작했으나 작업 범위와 잠금 대상이 너무 많아질 때 table 전체에 lock을 거는 행위
+		* MySQL에서는 lock escalation이 발생하지 않는다.
+
 ## 패턴1 (상호 거래 관련)
 
 ## 패턴2 (유니크 인덱스 관련)
@@ -358,6 +361,6 @@ INSERT INTO employees VALUES (90, 'Rodham'), (100, 'Piazza'), (110, 'Hockney');
 
 
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbMTE3NzIxMzQ2NSwxODQ1MzUxMTY2LC0zMz
+eyJoaXN0b3J5IjpbLTU2NTI5NzQzNCwxODQ1MzUxMTY2LC0zMz
 c5NzAyNzRdfQ==
 -->
