RealMysql/12. 쿼리 종류별 잠금.md updated from https://stackedit.io/

--- a/RealMysql/12. 쿼리 종류별 잠금.md
+++ b/RealMysql/12. 쿼리 종류별 잠금.md
@@ -352,6 +352,15 @@ INSERT INTO employees VALUES (90, 'Rodham'), (100, 'Piazza'), (110, 'Hockney');
 		* MySQL에서는 lock escalation이 발생하지 않는다.
 
 ## 패턴1 (상호 거래 관련)
+* 가장 많이 알려진 형태
+* A 사용자가 B 사용자에게 10포인트 전달하고, 동시에 B 사용자도 A 사용자에게 10포인트 전달하는 예시
+
+| transaction#1 | transaction#2|
+|--|--|
+| BEGIN |
+| | BEGIN |
+| UPDATE tb_user<br>SET poi
+
 
 ## 패턴2 (유니크 인덱스 관련)
 
@@ -361,6 +370,6 @@ INSERT INTO employees VALUES (90, 'Rodham'), (100, 'Piazza'), (110, 'Hockney');
 
 
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTU2NTI5NzQzNCwxODQ1MzUxMTY2LC0zMz
+eyJoaXN0b3J5IjpbLTIwOTQ4MDQyMywxODQ1MzUxMTY2LC0zMz
 c5NzAyNzRdfQ==
 -->
