--- a/RealMysql/12. 쿼리 종류별 잠금.md
+++ b/RealMysql/12. 쿼리 종류별 잠금.md
@@ -358,8 +358,14 @@ INSERT INTO employees VALUES (90, 'Rodham'), (100, 'Piazza'), (110, 'Hockney');
 | transaction#1 | transaction#2|
 |--|--|
 | BEGIN |
-| | BEGIN |
-| UPDATE tb_user<br>SET poi
+|| BEGIN |
+| UPDATE tb_user<br>SET point_balance = point_balance - 10<br>WHERE user_id = 'A';
+|| UPDATE tb_user<br>SET point_balance = point_balance - 10<br>WHERE user_id = 'B';|
+| UPDATE tb_user<br>SET point_balance = point_balance + 10<br>WHERE user_id = 'B';
+|| UPDATE tb_user<br>SET point_balance = point_balance + 10<br>WHERE user_id = 'A';|
+|| 데드락 발생! |
+| COMMIT |
+|| COMMIT |
 
 
 ## 패턴2 (유니크 인덱스 관련)
@@ -370,6 +376,6 @@ INSERT INTO employees VALUES (90, 'Rodham'), (100, 'Piazza'), (110, 'Hockney');
 
 
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTIwOTQ4MDQyMywxODQ1MzUxMTY2LC0zMz
+eyJoaXN0b3J5IjpbMTI0Njk1NDM5OSwxODQ1MzUxMTY2LC0zMz
 c5NzAyNzRdfQ==
 -->
