RealMysql/12. 쿼리 종류별 잠금.md updated from https://stackedit.io/

--- a/RealMysql/12. 쿼리 종류별 잠금.md
+++ b/RealMysql/12. 쿼리 종류별 잠금.md
@@ -366,7 +366,11 @@ INSERT INTO employees VALUES (90, 'Rodham'), (100, 'Piazza'), (110, 'Hockney');
 || 데드락 발생! |
 | COMMIT |
 || COMMIT |
+* 1번 트랜잭션 : A에 exclusive-record-lock 획득, B에 대한 exclusive-record-lock 댁
+* 2번 트랜잭션 : B에 exclusive-record-lock 획득
 
+### 회피 방법
+* 
 
 ## 패턴2 (유니크 인덱스 관련)
 
@@ -376,6 +380,6 @@ INSERT INTO employees VALUES (90, 'Rodham'), (100, 'Piazza'), (110, 'Hockney');
 
 
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbMTI0Njk1NDM5OSwxODQ1MzUxMTY2LC0zMz
-c5NzAyNzRdfQ==
+eyJoaXN0b3J5IjpbNDYxNzY3NzA3LDE4NDUzNTExNjYsLTMzNz
+k3MDI3NF19
 -->
