RealMysql/12. 쿼리 종류별 잠금.md updated from https://stackedit.io/

--- a/RealMysql/12. 쿼리 종류별 잠금.md
+++ b/RealMysql/12. 쿼리 종류별 잠금.md
@@ -366,11 +366,13 @@ INSERT INTO employees VALUES (90, 'Rodham'), (100, 'Piazza'), (110, 'Hockney');
 || 데드락 발생! |
 | COMMIT |
 || COMMIT |
-* 1번 트랜잭션 : A에 exclusive-record-lock 획득, B에 대한 exclusive-record-lock 댁
-* 2번 트랜잭션 : B에 exclusive-record-lock 획득
+* 1번 트랜잭션 : A에 exclusive-record-lock 획득, B에 대한 exclusive-record-lock 대기
+* 2번 트랜잭션 : B에 exclusive-record-lock 획득, A에 대한 exclusive-record-lock 대기
 
 ### 회피 방법
-* 
+* 비즈니스 로직에서 포인트의 차감 순서대로 실행하지 말고, primary key인 user_id 값을 기준으로 처리한다.
+	* 1번 트랜잭션 : 기존 순서대로 UPDATE 진행.
+	* 2번 트랜잭션 : B 사용자의
 
 ## 패턴2 (유니크 인덱스 관련)
 
@@ -380,6 +382,6 @@ INSERT INTO employees VALUES (90, 'Rodham'), (100, 'Piazza'), (110, 'Hockney');
 
 
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbNDYxNzY3NzA3LDE4NDUzNTExNjYsLTMzNz
-k3MDI3NF19
+eyJoaXN0b3J5IjpbLTU2ODg2NzA1OSwxODQ1MzUxMTY2LC0zMz
+c5NzAyNzRdfQ==
 -->
