RealMysql/12. 쿼리 종류별 잠금.md updated from https://stackedit.io/

--- a/RealMysql/12. 쿼리 종류별 잠금.md
+++ b/RealMysql/12. 쿼리 종류별 잠금.md
@@ -372,7 +372,9 @@ INSERT INTO employees VALUES (90, 'Rodham'), (100, 'Piazza'), (110, 'Hockney');
 ### 회피 방법
 * 비즈니스 로직에서 포인트의 차감 순서대로 실행하지 말고, primary key인 user_id 값을 기준으로 처리한다.
 	* 1번 트랜잭션 : 기존 순서대로 UPDATE 진행.
-	* 2번 트랜잭션 : B 사용자의
+	* 2번 트랜잭션 : B 사용자의 포인트 차감 UPDATE 보다 A 사용자의 증가 UPDATE를 먼저 실행.
+* user_id의 순서대로 처리되기 때문에 lock wait은 발생하더라도 절대 deadlock은 발생하지 않음.
+* 그러나.. 업무로직을 이렇게 작성한다? 어렵지..
 
 ## 패턴2 (유니크 인덱스 관련)
 
@@ -382,6 +384,6 @@ INSERT INTO employees VALUES (90, 'Rodham'), (100, 'Piazza'), (110, 'Hockney');
 
 
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTU2ODg2NzA1OSwxODQ1MzUxMTY2LC0zMz
-c5NzAyNzRdfQ==
+eyJoaXN0b3J5IjpbLTEyNTM4NTAyNDQsMTg0NTM1MTE2NiwtMz
+M3OTcwMjc0XX0=
 -->
