RealMysql/12. 쿼리 종류별 잠금.md updated from https://stackedit.io/

--- a/RealMysql/12. 쿼리 종류별 잠금.md
+++ b/RealMysql/12. 쿼리 종류별 잠금.md
@@ -377,6 +377,17 @@ INSERT INTO employees VALUES (90, 'Rodham'), (100, 'Piazza'), (110, 'Hockney');
 * 그러나.. 업무로직을 이렇게 작성한다? 어렵지..
 
 ## 패턴2 (유니크 인덱스 관련)
+* shared lock과 exclusive lock이 혼합된 형태.
+* 테이블에 primary key 또는 unique key가 존재할 때 발생할 수 있다.
+
+| transaction#1 | transaction#2|  transaction#3|
+|--|--|--|
+| BEGIN | BEGIN | BEGIN
+|| BEGIN |
+| UPDATE tb_user<br>SET point_balance = point_balance - 10<br>WHERE user_id = 'A';
+|| UPDATE tb_user<br>SET point_balance = point_balance - 10<br>WHERE user_id = 'B';|
+| UPDATE tb_user<br>SET point_balance = point_balance + 10<br>WHERE user_id = 'B';
+|| UPDATE tb_user<br>SET point_balance = point_balance + 10<br>WHERE user_id = 'A';|
 
 ## 패턴3 (외래키 관련)
 
@@ -384,6 +395,6 @@ INSERT INTO employees VALUES (90, 'Rodham'), (100, 'Piazza'), (110, 'Hockney');
 
 
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTEyNTM4NTAyNDQsMTg0NTM1MTE2NiwtMz
-M3OTcwMjc0XX0=
+eyJoaXN0b3J5IjpbLTExNTQ2MzEyNDAsLTEyNTM4NTAyNDQsMT
+g0NTM1MTE2NiwtMzM3OTcwMjc0XX0=
 -->
