RealMysql/12. 쿼리 종류별 잠금.md updated from https://stackedit.io/

--- a/RealMysql/12. 쿼리 종류별 잠금.md
+++ b/RealMysql/12. 쿼리 종류별 잠금.md
@@ -382,12 +382,14 @@ INSERT INTO employees VALUES (90, 'Rodham'), (100, 'Piazza'), (110, 'Hockney');
 
 | transaction#1 | transaction#2|  transaction#3|
 |--|--|--|
-| BEGIN | BEGIN | BEGIN
-|| BEGIN |
-| UPDATE tb_user<br>SET point_balance = point_balance - 10<br>WHERE user_id = 'A';
-|| UPDATE tb_user<br>SET point_balance = point_balance - 10<br>WHERE user_id = 'B';|
-| UPDATE tb_user<br>SET point_balance = point_balance + 10<br>WHERE user_id = 'B';
-|| UPDATE tb_user<br>SET point_balance = point_balance + 10<br>WHERE user_id = 'A';|
+| BEGIN | BEGIN | BEGIN |
+| INSERT INTO tb_test VALUES(9);|
+|| INSERT INTO tb_test VALUES(9);|
+||| INSERT INTO tb_test VALUES(9);|
+| ROLLBACK; |
+| -- 데드락 발생 시점 -- |
+
+* 1번 트랜잭션이 ROLLBACK을 실행하기 직전깢
 
 ## 패턴3 (외래키 관련)
 
@@ -395,6 +397,6 @@ INSERT INTO employees VALUES (90, 'Rodham'), (100, 'Piazza'), (110, 'Hockney');
 
 
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTExNTQ2MzEyNDAsLTEyNTM4NTAyNDQsMT
+eyJoaXN0b3J5IjpbLTEwOTUzMzM4MDUsLTEyNTM4NTAyNDQsMT
 g0NTM1MTE2NiwtMzM3OTcwMjc0XX0=
 -->
