RealMysql/12. 쿼리 종류별 잠금.md updated from https://stackedit.io/

--- a/RealMysql/12. 쿼리 종류별 잠금.md
+++ b/RealMysql/12. 쿼리 종류별 잠금.md
@@ -389,7 +389,12 @@ INSERT INTO employees VALUES (90, 'Rodham'), (100, 'Piazza'), (110, 'Hockney');
 | ROLLBACK; |
 | -- 데드락 발생 시점 -- |
 
-* 1번 트랜잭션이 ROLLBACK을 실행하기 직전깢
+* 1번 트랜잭션이 ROLLBACK을 실행하기 직전까지 9번 레코드에 대한 exclusive record lock을 소유했음.
+* 2,3번 트랜잭션은 shared record lock 을 얻기 위해 대기중인 상태.
+* ROLLBACK이 실행되는 순간 exclusive lock이 해제된다.
+* 2,3번 트랜잭션은 shared record lock을 획득한다.
+* 그리고 9번 레코드가 없다는 것을 알게 된다.
+* 2,3번 트랜잭션은 서로 exclusive
 
 ## 패턴3 (외래키 관련)
 
@@ -397,6 +402,6 @@ INSERT INTO employees VALUES (90, 'Rodham'), (100, 'Piazza'), (110, 'Hockney');
 
 
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTEwOTUzMzM4MDUsLTEyNTM4NTAyNDQsMT
+eyJoaXN0b3J5IjpbLTE1NTgwNzE5NjEsLTEyNTM4NTAyNDQsMT
 g0NTM1MTE2NiwtMzM3OTcwMjc0XX0=
 -->
