RealMysql/12. 쿼리 종류별 잠금.md updated from https://stackedit.io/

--- a/RealMysql/12. 쿼리 종류별 잠금.md
+++ b/RealMysql/12. 쿼리 종류별 잠금.md
@@ -394,7 +394,15 @@ INSERT INTO employees VALUES (90, 'Rodham'), (100, 'Piazza'), (110, 'Hockney');
 * ROLLBACK이 실행되는 순간 exclusive lock이 해제된다.
 * 2,3번 트랜잭션은 shared record lock을 획득한다.
 * 그리고 9번 레코드가 없다는 것을 알게 된다.
-* 2,3번 트랜잭션은 서로 exclusive
+* 2,3번 트랜잭션은 서로 exclusive record lock을 획득하려고 한다.
+
+### 특징
+* 1번 패턴보다 훨씬 빈번하게 발생한다.
+* 이건 프로그램을 수정해서 회피할 수 있는 방법이 없다.
+* 데드락을 줄일 수 있는 방법은 최대한 unique index의 사용을 자제하는 것이다.
+* primary key는 생략할 수 없다.
+
+
 
 ## 패턴3 (외래키 관련)
 
@@ -402,6 +410,6 @@ INSERT INTO employees VALUES (90, 'Rodham'), (100, 'Piazza'), (110, 'Hockney');
 
 
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTE1NTgwNzE5NjEsLTEyNTM4NTAyNDQsMT
-g0NTM1MTE2NiwtMzM3OTcwMjc0XX0=
+eyJoaXN0b3J5IjpbMTUyODc4MTMyMiwtMTI1Mzg1MDI0NCwxOD
+Q1MzUxMTY2LC0zMzc5NzAyNzRdfQ==
 -->
