RealMysql/12. 쿼리 종류별 잠금.md updated from https://stackedit.io/

--- a/RealMysql/12. 쿼리 종류별 잠금.md
+++ b/RealMysql/12. 쿼리 종류별 잠금.md
@@ -402,7 +402,11 @@ INSERT INTO employees VALUES (90, 'Rodham'), (100, 'Piazza'), (110, 'Hockney');
 * 데드락을 줄일 수 있는 방법은 최대한 unique index의 사용을 자제하는 것이다.
 * primary key는 생략할 수 없다.
 
-
+### 고려사항
+* 배치 프로그램에서 발생한다면 실행 시간을 변경해보자.
+* OLTP 환경에서 데드락이 발생한다면 프로그램 코드에 데드락에 대한 핸들러를 추가한다.
+	* SQL-STATE 값을 체크한다.
+* 
 
 ## 패턴3 (외래키 관련)
 
@@ -410,6 +414,6 @@ INSERT INTO employees VALUES (90, 'Rodham'), (100, 'Piazza'), (110, 'Hockney');
 
 
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbMTUyODc4MTMyMiwtMTI1Mzg1MDI0NCwxOD
+eyJoaXN0b3J5IjpbMTgwNDAyMjkwMCwtMTI1Mzg1MDI0NCwxOD
 Q1MzUxMTY2LC0zMzc5NzAyNzRdfQ==
 -->
