RealMysql/12. 쿼리 종류별 잠금.md updated from https://stackedit.io/

--- a/RealMysql/12. 쿼리 종류별 잠금.md
+++ b/RealMysql/12. 쿼리 종류별 잠금.md
@@ -406,7 +406,12 @@ INSERT INTO employees VALUES (90, 'Rodham'), (100, 'Piazza'), (110, 'Hockney');
 * 배치 프로그램에서 발생한다면 실행 시간을 변경해보자.
 * OLTP 환경에서 데드락이 발생한다면 프로그램 코드에 데드락에 대한 핸들러를 추가한다.
 	* SQL-STATE 값을 체크한다.
-* 
+
+### 데드락 조회 방법
+* `SHOW ENGINE INNODB STATUS` 명령을 이용해 상태 정보를 확인한다.
+	* 마지막으로 발생한 데드락 정보만 보여준다.
+	* 주기적으로 로그를 남기는 방법
+* 하나의 코드 블록이 병렬로 여러 스레드에서 동시에 실행되면서 서로 간섭을 일으켜 발생하는 경우가 대부분ㅇ
 
 ## 패턴3 (외래키 관련)
 
@@ -414,6 +419,6 @@ INSERT INTO employees VALUES (90, 'Rodham'), (100, 'Piazza'), (110, 'Hockney');
 
 
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbMTgwNDAyMjkwMCwtMTI1Mzg1MDI0NCwxOD
-Q1MzUxMTY2LC0zMzc5NzAyNzRdfQ==
+eyJoaXN0b3J5IjpbMzgyNjgzNDM2LC0xMjUzODUwMjQ0LDE4ND
+UzNTExNjYsLTMzNzk3MDI3NF19
 -->
