RealMysql/12. 쿼리 종류별 잠금.md updated from https://stackedit.io/

--- a/RealMysql/12. 쿼리 종류별 잠금.md
+++ b/RealMysql/12. 쿼리 종류별 잠금.md
@@ -411,14 +411,18 @@ INSERT INTO employees VALUES (90, 'Rodham'), (100, 'Piazza'), (110, 'Hockney');
 * `SHOW ENGINE INNODB STATUS` 명령을 이용해 상태 정보를 확인한다.
 	* 마지막으로 발생한 데드락 정보만 보여준다.
 	* 주기적으로 로그를 남기는 방법
-* 하나의 코드 블록이 병렬로 여러 스레드에서 동시에 실행되면서 서로 간섭을 일으켜 발생하는 경우가 대부분ㅇ
+* 하나의 코드 블록이 병렬로 여러 스레드에서 동시에 실행되면서 서로 간섭을 일으켜 발생하는 경우가 대부분이다.
 
 ## 패턴3 (외래키 관련)
+* FOREIGN KEY 때문에 lock이 관련 테이블로 전파되면서 발생하는 데드락.
+```sql
+CREATE TABLE tb_
+```
 
 ## 패턴4 (서로 다른 인덱스를 통한 잠금)
 
 
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbMzgyNjgzNDM2LC0xMjUzODUwMjQ0LDE4ND
-UzNTExNjYsLTMzNzk3MDI3NF19
+eyJoaXN0b3J5IjpbMTg5MDAwODI1NCwtMTI1Mzg1MDI0NCwxOD
+Q1MzUxMTY2LC0zMzc5NzAyNzRdfQ==
 -->
