RealMysql/12. 쿼리 종류별 잠금.md updated from https://stackedit.io/

--- a/RealMysql/12. 쿼리 종류별 잠금.md
+++ b/RealMysql/12. 쿼리 종류별 잠금.md
@@ -416,13 +416,26 @@ INSERT INTO employees VALUES (90, 'Rodham'), (100, 'Piazza'), (110, 'Hockney');
 ## 패턴3 (외래키 관련)
 * FOREIGN KEY 때문에 lock이 관련 테이블로 전파되면서 발생하는 데드락.
 ```sql
-CREATE TABLE tb_
+CREATE TABLE tb_board {
+  board_id INT NOT NULL,
+  article_count INT NOT NULL DEFAULT 0,
+  PRIMARY KEY (board_id)
+};
+
+CREATE TABLE tb_article {
+  article_id INT NOT NULL,
+  board_id INT NOT NULL,
+  PRIMARY KEY (article_id),
+  CONSTRAINT FOREIGN KEY fx_boardid (board_id) REFERENCES tb_board(board_id)
+};
+
+INSERT INTO tb_board(board_id, ar
 ```
 
 ## 패턴4 (서로 다른 인덱스를 통한 잠금)
 
 
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbMTg5MDAwODI1NCwtMTI1Mzg1MDI0NCwxOD
-Q1MzUxMTY2LC0zMzc5NzAyNzRdfQ==
+eyJoaXN0b3J5IjpbLTEzNTgyMjcwNzQsLTEyNTM4NTAyNDQsMT
+g0NTM1MTE2NiwtMzM3OTcwMjc0XX0=
 -->
