RealMysql/12. 쿼리 종류별 잠금.md updated from https://stackedit.io/

--- a/RealMysql/12. 쿼리 종류별 잠금.md
+++ b/RealMysql/12. 쿼리 종류별 잠금.md
@@ -429,13 +429,24 @@ CREATE TABLE tb_article {
   CONSTRAINT FOREIGN KEY fx_boardid (board_id) REFERENCES tb_board(board_id)
 };
 
-INSERT INTO tb_board(board_id, ar
+INSERT INTO tb_board(board_id, article_count) VALUES(1,0);
 ```
+
+| transaction#1 | transaction#2|
+|--|--|
+| BEGIN | BEGIN |
+| INSERT INTO tb_article VALUES(1,1);|
+|| INSERT INTO tb_article VALUES(2,1);|
+| UPDATE tb_board<br>SET article_count=article_count+1<br>WHERE board_id=1; |
+|| UPDATE tb_board<br>SET article_count=article_count+1<br>WHERE board_id=1; |
+| -- 데드락 발생 시점 -- |
+
+
 
 ## 패턴4 (서로 다른 인덱스를 통한 잠금)
 
 
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTEzNTgyMjcwNzQsLTEyNTM4NTAyNDQsMT
+eyJoaXN0b3J5IjpbLTEwNjM3MDQ3MDEsLTEyNTM4NTAyNDQsMT
 g0NTM1MTE2NiwtMzM3OTcwMjc0XX0=
 -->
