RealMysql/12. 쿼리 종류별 잠금.md updated from https://stackedit.io/

--- a/RealMysql/12. 쿼리 종류별 잠금.md
+++ b/RealMysql/12. 쿼리 종류별 잠금.md
@@ -440,15 +440,17 @@ INSERT INTO tb_board(board_id, article_count) VALUES(1,0);
 | UPDATE tb_board<br>SET article_count=article_count+1<br>WHERE board_id=1; |
 || UPDATE tb_board<br>SET article_count=article_count+1<br>WHERE board_id=1; |
 | -- 데드락 발생 시점 -- |
-```
+
 
 * 1번 트랜잭션 쿼리가 실행되면서 tb_article의 1번 레코드는 exclusive lock이 걸림.
+	* 또한 tb_board 테이블의 1번 레코드는 shared lock이 걸림.
+* 
 
 ## 패턴4 (서로 다른 인덱스를 통한 잠금)
 
 
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbODYwNDUwNjAzLDEyNDE5NzczMjEsLTEwNj
+eyJoaXN0b3J5IjpbODE1NDcyNDIzLDEyNDE5NzczMjEsLTEwNj
 M3MDQ3MDEsLTEyNTM4NTAyNDQsMTg0NTM1MTE2NiwtMzM3OTcw
 Mjc0XX0=
 -->
