--- a/RealMysql/6. 실행 계획.md
+++ b/RealMysql/6. 실행 계획.md
@@ -212,17 +212,17 @@ SELECT * FROM dept_emo WHERE from_date>='2002-07-01';
 * **no matching row in const table (MySQL 5.1부터)**
 * **No tables used (MySQL 5.0의 "No tables"에서 키워드 변경됨)**
 * **Not exists**
-* **
+* **Rang
 * **
 ### 6.2.11 EXPLAIN EXTENDED(Filterd 칼럼)
 ### 6.2.12 EXPLAIN EXTENDED(추가 옵티마이저 정보)
 ### 6.2.13 EXPLAIN PARTITIONS(Partitions 칼럼)
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbNTM1MjA2ODY3LDEwODU5ODY2NiwtMTgxNT
-gzMzkxNCwyMDE0MTY3OTU4LC0xNzA3OTg1MDM0LC0xNjgwMjY0
-ODAzLC03NDIxMzYwNTMsLTg5MTI3NDE0NywxNTE1OTY2NTkwLD
-EzNjI5MzY1ODgsMTQxNDUyNjM2NSwxMzE0MzMxMjQ5LDE4Nzk5
-OTQ1NTMsLTE0OTAyNDg3NjQsLTE3Mjc1NzQ0NDEsMTU0MDg4MT
-g0MSwxMDc3MDM2MTA4LC0xMDU5Mzg1NDQsODI0OTg1MDk3LDEy
-OTQwNjAzNzddfQ==
+eyJoaXN0b3J5IjpbMTQ0NjMzNDEwNyw1MzUyMDY4NjcsMTA4NT
+k4NjY2LC0xODE1ODMzOTE0LDIwMTQxNjc5NTgsLTE3MDc5ODUw
+MzQsLTE2ODAyNjQ4MDMsLTc0MjEzNjA1MywtODkxMjc0MTQ3LD
+E1MTU5NjY1OTAsMTM2MjkzNjU4OCwxNDE0NTI2MzY1LDEzMTQz
+MzEyNDksMTg3OTk5NDU1MywtMTQ5MDI0ODc2NCwtMTcyNzU3ND
+Q0MSwxNTQwODgxODQxLDEwNzcwMzYxMDgsLTEwNTkzODU0NCw4
+MjQ5ODUwOTddfQ==
 -->
