RealMysql/6. 실행 계획.md updated from https://stackedit.io/

--- a/RealMysql/6. 실행 계획.md
+++ b/RealMysql/6. 실행 계획.md
@@ -212,13 +212,15 @@ SELECT * FROM dept_emo WHERE from_date>='2002-07-01';
 * **no matching row in const table (MySQL 5.1부터)**
 * **No tables used (MySQL 5.0의 "No tables"에서 키워드 변경됨)**
 * **Not exists**
-* **Rang
-* **
+* **Range checked for each record (index map: N)**
+* **Scanned N databases(MySQL 5.1 부터)**
+* **Select tsbels optimized away**
+* ****
 ### 6.2.11 EXPLAIN EXTENDED(Filterd 칼럼)
 ### 6.2.12 EXPLAIN EXTENDED(추가 옵티마이저 정보)
 ### 6.2.13 EXPLAIN PARTITIONS(Partitions 칼럼)
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbMTQ0NjMzNDEwNyw1MzUyMDY4NjcsMTA4NT
+eyJoaXN0b3J5IjpbLTIwNDE3MTY1MCw1MzUyMDY4NjcsMTA4NT
 k4NjY2LC0xODE1ODMzOTE0LDIwMTQxNjc5NTgsLTE3MDc5ODUw
 MzQsLTE2ODAyNjQ4MDMsLTc0MjEzNjA1MywtODkxMjc0MTQ3LD
 E1MTU5NjY1OTAsMTM2MjkzNjU4OCwxNDE0NTI2MzY1LDEzMTQz
