--- a/RealMysql/6. 실행 계획.md
+++ b/RealMysql/6. 실행 계획.md
@@ -216,12 +216,15 @@ SELECT * FROM dept_emo WHERE from_date>='2002-07-01';
 * **Scanned N databases(MySQL 5.1 부터)**
 * **Select tsbels optimized away**
 * **Skiped_open_table, Open_frm_only, Open_trigger_only, Open_full_table(MySQL 5.1 부터)**
-*  **unique row not **
+* **unique row not found (MySQL 5.1 부터)**
+* **Using filesort**
+* **Using index(커버링 인덱스)**
+* ****
 ### 6.2.11 EXPLAIN EXTENDED(Filterd 칼럼)
 ### 6.2.12 EXPLAIN EXTENDED(추가 옵티마이저 정보)
 ### 6.2.13 EXPLAIN PARTITIONS(Partitions 칼럼)
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTEwNjMwOTU2NjUsNTM1MjA2ODY3LDEwOD
+eyJoaXN0b3J5IjpbLTE2Mzk5MjYwMDUsNTM1MjA2ODY3LDEwOD
 U5ODY2NiwtMTgxNTgzMzkxNCwyMDE0MTY3OTU4LC0xNzA3OTg1
 MDM0LC0xNjgwMjY0ODAzLC03NDIxMzYwNTMsLTg5MTI3NDE0Ny
 wxNTE1OTY2NTkwLDEzNjI5MzY1ODgsMTQxNDUyNjM2NSwxMzE0
