RealMysql/6. 실행 계획.md updated from https://stackedit.io/

--- a/RealMysql/6. 실행 계획.md
+++ b/RealMysql/6. 실행 계획.md
@@ -223,16 +223,17 @@ SELECT * FROM dept_emo WHERE from_date>='2002-07-01';
 * **Using join buffer(MySQL 5.1 부터)**
 * **Using sort_union(...), Uing union(...), Using intersect(...)**
 * **Using temporary**
-* ****
+* **Usind where**
+* **Using where with pushed condition**
 ### 6.2.11 EXPLAIN EXTENDED(Filterd 칼럼)
 ### 6.2.12 EXPLAIN EXTENDED(추가 옵티마이저 정보)
 ### 6.2.13 EXPLAIN PARTITIONS(Partitions 칼럼)
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTEyODM3NjY1NDEsNTM1MjA2ODY3LDEwOD
-U5ODY2NiwtMTgxNTgzMzkxNCwyMDE0MTY3OTU4LC0xNzA3OTg1
-MDM0LC0xNjgwMjY0ODAzLC03NDIxMzYwNTMsLTg5MTI3NDE0Ny
-wxNTE1OTY2NTkwLDEzNjI5MzY1ODgsMTQxNDUyNjM2NSwxMzE0
-MzMxMjQ5LDE4Nzk5OTQ1NTMsLTE0OTAyNDg3NjQsLTE3Mjc1Nz
-Q0NDEsMTU0MDg4MTg0MSwxMDc3MDM2MTA4LC0xMDU5Mzg1NDQs
-ODI0OTg1MDk3XX0=
+eyJoaXN0b3J5IjpbMTAwMzQ0ODM0OCw1MzUyMDY4NjcsMTA4NT
+k4NjY2LC0xODE1ODMzOTE0LDIwMTQxNjc5NTgsLTE3MDc5ODUw
+MzQsLTE2ODAyNjQ4MDMsLTc0MjEzNjA1MywtODkxMjc0MTQ3LD
+E1MTU5NjY1OTAsMTM2MjkzNjU4OCwxNDE0NTI2MzY1LDEzMTQz
+MzEyNDksMTg3OTk5NDU1MywtMTQ5MDI0ODc2NCwtMTcyNzU3ND
+Q0MSwxNTQwODgxODQxLDEwNzcwMzYxMDgsLTEwNTkzODU0NCw4
+MjQ5ODUwOTddfQ==
 -->
