RealMysql/6. 실행 계획.md updated from https://stackedit.io/

--- a/RealMysql/6. 실행 계획.md
+++ b/RealMysql/6. 실행 계획.md
@@ -208,7 +208,7 @@ SELECT * FROM dept_emo WHERE from_date>='2002-07-01';
 	* 위의 경우 실제 데이터를 읽어보지 않은 경우에도 알 수 있는 정보라면 해당 키워드는 데이터를 읽어보고 WHERE 조건이 항상 FALSE가 되는 경우 출력된다.
 	* 앞서 *"type이 const인 실행 계획은 옵티마이저가 쿼리를 최적화하는 단계에서 옵티마이저가 직접 쿼리의 일부를 실행하고 상수화 한다"* 고 했다. 즉 이과정에서 데이터를 읽어보고 WHERE 조건이 항상 FALSE인지를 판단한다.
 * **No matching min/max row (MySQL 5.1부터)**
-	* 
+	* 쿼리의 WHERE 조건절 중 MIN()이나 MAX() 와 같은 집합 함수가 있는 쿼리의 
 * **no matching row in const table (MySQL 5.1부터)**
 * **No tables used (MySQL 5.0의 "No tables"에서 키워드 변경됨)**
 * **Not exists**
@@ -229,11 +229,11 @@ SELECT * FROM dept_emo WHERE from_date>='2002-07-01';
 ### 6.2.12 EXPLAIN EXTENDED(추가 옵티마이저 정보)
 ### 6.2.13 EXPLAIN PARTITIONS(Partitions 칼럼)
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbMTAwMzQ0ODM0OCw1MzUyMDY4NjcsMTA4NT
-k4NjY2LC0xODE1ODMzOTE0LDIwMTQxNjc5NTgsLTE3MDc5ODUw
-MzQsLTE2ODAyNjQ4MDMsLTc0MjEzNjA1MywtODkxMjc0MTQ3LD
-E1MTU5NjY1OTAsMTM2MjkzNjU4OCwxNDE0NTI2MzY1LDEzMTQz
-MzEyNDksMTg3OTk5NDU1MywtMTQ5MDI0ODc2NCwtMTcyNzU3ND
-Q0MSwxNTQwODgxODQxLDEwNzcwMzYxMDgsLTEwNTkzODU0NCw4
-MjQ5ODUwOTddfQ==
+eyJoaXN0b3J5IjpbNDk5MDkzMDI1LDUzNTIwNjg2NywxMDg1OT
+g2NjYsLTE4MTU4MzM5MTQsMjAxNDE2Nzk1OCwtMTcwNzk4NTAz
+NCwtMTY4MDI2NDgwMywtNzQyMTM2MDUzLC04OTEyNzQxNDcsMT
+UxNTk2NjU5MCwxMzYyOTM2NTg4LDE0MTQ1MjYzNjUsMTMxNDMz
+MTI0OSwxODc5OTk0NTUzLC0xNDkwMjQ4NzY0LC0xNzI3NTc0ND
+QxLDE1NDA4ODE4NDEsMTA3NzAzNjEwOCwtMTA1OTM4NTQ0LDgy
+NDk4NTA5N119
 -->
