--- a/RealMysql/6. 실행 계획.md
+++ b/RealMysql/6. 실행 계획.md
@@ -208,8 +208,9 @@ SELECT * FROM dept_emo WHERE from_date>='2002-07-01';
 	* 위의 경우 실제 데이터를 읽어보지 않은 경우에도 알 수 있는 정보라면 해당 키워드는 데이터를 읽어보고 WHERE 조건이 항상 FALSE가 되는 경우 출력된다.
 	* 앞서 *"type이 const인 실행 계획은 옵티마이저가 쿼리를 최적화하는 단계에서 옵티마이저가 직접 쿼리의 일부를 실행하고 상수화 한다"* 고 했다. 즉 이과정에서 데이터를 읽어보고 WHERE 조건이 항상 FALSE인지를 판단한다.
 * **No matching min/max row (MySQL 5.1부터)**
-	* 쿼리의 WHERE 조건절 중 MIN()이나 MAX() 와 같은 집합 함수가 있는 쿼리의 
+	* MIN()이나 MAX() 와 같은 집합 함수가 있는 쿼리의 조건절에 일치하는 레코드가 한 건도 없을 때 출력.
 * **no matching row in const table (MySQL 5.1부터)**
+	* 
 * **No tables used (MySQL 5.0의 "No tables"에서 키워드 변경됨)**
 * **Not exists**
 * **Range checked for each record (index map: N)**
@@ -229,11 +230,11 @@ SELECT * FROM dept_emo WHERE from_date>='2002-07-01';
 ### 6.2.12 EXPLAIN EXTENDED(추가 옵티마이저 정보)
 ### 6.2.13 EXPLAIN PARTITIONS(Partitions 칼럼)
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbNDk5MDkzMDI1LDUzNTIwNjg2NywxMDg1OT
-g2NjYsLTE4MTU4MzM5MTQsMjAxNDE2Nzk1OCwtMTcwNzk4NTAz
-NCwtMTY4MDI2NDgwMywtNzQyMTM2MDUzLC04OTEyNzQxNDcsMT
-UxNTk2NjU5MCwxMzYyOTM2NTg4LDE0MTQ1MjYzNjUsMTMxNDMz
-MTI0OSwxODc5OTk0NTUzLC0xNDkwMjQ4NzY0LC0xNzI3NTc0ND
-QxLDE1NDA4ODE4NDEsMTA3NzAzNjEwOCwtMTA1OTM4NTQ0LDgy
-NDk4NTA5N119
+eyJoaXN0b3J5IjpbLTE5MjYxMjc4MDIsNTM1MjA2ODY3LDEwOD
+U5ODY2NiwtMTgxNTgzMzkxNCwyMDE0MTY3OTU4LC0xNzA3OTg1
+MDM0LC0xNjgwMjY0ODAzLC03NDIxMzYwNTMsLTg5MTI3NDE0Ny
+wxNTE1OTY2NTkwLDEzNjI5MzY1ODgsMTQxNDUyNjM2NSwxMzE0
+MzMxMjQ5LDE4Nzk5OTQ1NTMsLTE0OTAyNDg3NjQsLTE3Mjc1Nz
+Q0NDEsMTU0MDg4MTg0MSwxMDc3MDM2MTA4LC0xMDU5Mzg1NDQs
+ODI0OTg1MDk3XX0=
 -->
