--- a/RealMysql/6. 실행 계획.md
+++ b/RealMysql/6. 실행 계획.md
@@ -212,7 +212,7 @@ SELECT * FROM dept_emo WHERE from_date>='2002-07-01';
 * **no matching row in const table (MySQL 5.1부터)**
 	* 조인에 사용된 테이블에서 const 방식으로 접근할 때 일치하는 레코드가 없는 경우 출력.
 * **No tables used (MySQL 5.0의 "No tables"에서 키워드 변경됨)**
-	* 
+	* FROM 절이 
 * **Not exists**
 * **Range checked for each record (index map: N)**
 * **Scanned N databases(MySQL 5.1 부터)**
@@ -231,11 +231,11 @@ SELECT * FROM dept_emo WHERE from_date>='2002-07-01';
 ### 6.2.12 EXPLAIN EXTENDED(추가 옵티마이저 정보)
 ### 6.2.13 EXPLAIN PARTITIONS(Partitions 칼럼)
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbMjIxMjA0MjczLDUzNTIwNjg2NywxMDg1OT
-g2NjYsLTE4MTU4MzM5MTQsMjAxNDE2Nzk1OCwtMTcwNzk4NTAz
-NCwtMTY4MDI2NDgwMywtNzQyMTM2MDUzLC04OTEyNzQxNDcsMT
-UxNTk2NjU5MCwxMzYyOTM2NTg4LDE0MTQ1MjYzNjUsMTMxNDMz
-MTI0OSwxODc5OTk0NTUzLC0xNDkwMjQ4NzY0LC0xNzI3NTc0ND
-QxLDE1NDA4ODE4NDEsMTA3NzAzNjEwOCwtMTA1OTM4NTQ0LDgy
-NDk4NTA5N119
+eyJoaXN0b3J5IjpbLTIwODI2OTQyODksNTM1MjA2ODY3LDEwOD
+U5ODY2NiwtMTgxNTgzMzkxNCwyMDE0MTY3OTU4LC0xNzA3OTg1
+MDM0LC0xNjgwMjY0ODAzLC03NDIxMzYwNTMsLTg5MTI3NDE0Ny
+wxNTE1OTY2NTkwLDEzNjI5MzY1ODgsMTQxNDUyNjM2NSwxMzE0
+MzMxMjQ5LDE4Nzk5OTQ1NTMsLTE0OTAyNDg3NjQsLTE3Mjc1Nz
+Q0NDEsMTU0MDg4MTg0MSwxMDc3MDM2MTA4LC0xMDU5Mzg1NDQs
+ODI0OTg1MDk3XX0=
 -->
