RealMysql/6. 실행 계획.md updated from https://stackedit.io/

--- a/RealMysql/6. 실행 계획.md
+++ b/RealMysql/6. 실행 계획.md
@@ -214,8 +214,9 @@ SELECT * FROM dept_emo WHERE from_date>='2002-07-01';
 * **No tables used (MySQL 5.0의 "No tables"에서 키워드 변경됨)**
 	* FROM 절이 없는 쿼리 문장이나 "FROM DUAL(칼럼과 레코드를 각각 1개씩만 가지는 가상의 상수 테이블)" 형태의 쿼리 실행 계획에서 출력
 * **Not exists**
-	* 
-* **Range checked for each record (index map: N)**
+	* 아우터 조인을 이용해 안티-조인을 수행하는 쿼리에서 표시.
+	* SQL의 NOT 
+**Range checked for each record (index map: N)**
 * **Scanned N databases(MySQL 5.1 부터)**
 * **Select tsbels optimized away**
 * **Skiped_open_table, Open_frm_only, Open_trigger_only, Open_full_table(MySQL 5.1 부터)**
@@ -232,11 +233,11 @@ SELECT * FROM dept_emo WHERE from_date>='2002-07-01';
 ### 6.2.12 EXPLAIN EXTENDED(추가 옵티마이저 정보)
 ### 6.2.13 EXPLAIN PARTITIONS(Partitions 칼럼)
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbMjk0NTU3NDU3LDUzNTIwNjg2NywxMDg1OT
-g2NjYsLTE4MTU4MzM5MTQsMjAxNDE2Nzk1OCwtMTcwNzk4NTAz
-NCwtMTY4MDI2NDgwMywtNzQyMTM2MDUzLC04OTEyNzQxNDcsMT
-UxNTk2NjU5MCwxMzYyOTM2NTg4LDE0MTQ1MjYzNjUsMTMxNDMz
-MTI0OSwxODc5OTk0NTUzLC0xNDkwMjQ4NzY0LC0xNzI3NTc0ND
-QxLDE1NDA4ODE4NDEsMTA3NzAzNjEwOCwtMTA1OTM4NTQ0LDgy
-NDk4NTA5N119
+eyJoaXN0b3J5IjpbMTU0MDI5NTUyOSwyOTQ1NTc0NTcsNTM1Mj
+A2ODY3LDEwODU5ODY2NiwtMTgxNTgzMzkxNCwyMDE0MTY3OTU4
+LC0xNzA3OTg1MDM0LC0xNjgwMjY0ODAzLC03NDIxMzYwNTMsLT
+g5MTI3NDE0NywxNTE1OTY2NTkwLDEzNjI5MzY1ODgsMTQxNDUy
+NjM2NSwxMzE0MzMxMjQ5LDE4Nzk5OTQ1NTMsLTE0OTAyNDg3Nj
+QsLTE3Mjc1NzQ0NDEsMTU0MDg4MTg0MSwxMDc3MDM2MTA4LC0x
+MDU5Mzg1NDRdfQ==
 -->
