--- a/RealMysql/6. 실행 계획.md
+++ b/RealMysql/6. 실행 계획.md
@@ -215,8 +215,8 @@ SELECT * FROM dept_emo WHERE from_date>='2002-07-01';
 	* FROM 절이 없는 쿼리 문장이나 "FROM DUAL(칼럼과 레코드를 각각 1개씩만 가지는 가상의 상수 테이블)" 형태의 쿼리 실행 계획에서 출력
 * **Not exists**
 	* 아우터 조인을 이용해 안티-조인을 수행하는 쿼리에서 표시.
-		* 일반적으로 안티-조인으로 처리해야 하지만 레코드의 건수가 많을 때는 NOT IN 이나 NOT EXIST 연산자보다는 아우터 조인을 이용하는 것이 서
-	* SQL의 NOT EXIST 연산자와 혼동하지 않도록 주의
+		* 일반적으로 안티-조인으로 처리해야 하지만 레코드의 건수가 많을 때는 NOT IN 이나 NOT EXIST 연산자보다는 아우터 조인을 이용하는 것이 성능이 더 좋다.
+	* SQL의 NOT EXIST 연산자와 혼동하지 않도록 주의.
 * **Range checked for each record (index map: N)**
 	* 
 * **Scanned N databases(MySQL 5.1 부터)**
@@ -235,11 +235,11 @@ SELECT * FROM dept_emo WHERE from_date>='2002-07-01';
 ### 6.2.12 EXPLAIN EXTENDED(추가 옵티마이저 정보)
 ### 6.2.13 EXPLAIN PARTITIONS(Partitions 칼럼)
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbMjg5ODQwODQwLDI5NDU1NzQ1Nyw1MzUyMD
-Y4NjcsMTA4NTk4NjY2LC0xODE1ODMzOTE0LDIwMTQxNjc5NTgs
-LTE3MDc5ODUwMzQsLTE2ODAyNjQ4MDMsLTc0MjEzNjA1MywtOD
-kxMjc0MTQ3LDE1MTU5NjY1OTAsMTM2MjkzNjU4OCwxNDE0NTI2
-MzY1LDEzMTQzMzEyNDksMTg3OTk5NDU1MywtMTQ5MDI0ODc2NC
-wtMTcyNzU3NDQ0MSwxNTQwODgxODQxLDEwNzcwMzYxMDgsLTEw
-NTkzODU0NF19
+eyJoaXN0b3J5IjpbLTU5NTIyMTgwMywyOTQ1NTc0NTcsNTM1Mj
+A2ODY3LDEwODU5ODY2NiwtMTgxNTgzMzkxNCwyMDE0MTY3OTU4
+LC0xNzA3OTg1MDM0LC0xNjgwMjY0ODAzLC03NDIxMzYwNTMsLT
+g5MTI3NDE0NywxNTE1OTY2NTkwLDEzNjI5MzY1ODgsMTQxNDUy
+NjM2NSwxMzE0MzMxMjQ5LDE4Nzk5OTQ1NTMsLTE0OTAyNDg3Nj
+QsLTE3Mjc1NzQ0NDEsMTU0MDg4MTg0MSwxMDc3MDM2MTA4LC0x
+MDU5Mzg1NDRdfQ==
 -->
