--- a/RealMysql/6. 실행 계획.md
+++ b/RealMysql/6. 실행 계획.md
@@ -218,7 +218,8 @@ SELECT * FROM dept_emo WHERE from_date>='2002-07-01';
 		* 일반적으로 안티-조인으로 처리해야 하지만 레코드의 건수가 많을 때는 NOT IN 이나 NOT EXIST 연산자보다는 아우터 조인을 이용하는 것이 성능이 더 좋다.
 	* SQL의 NOT EXIST 연산자와 혼동하지 않도록 주의.
 * **Range checked for each record (index map: N)**
-	* 
+	* 조인 조건에 상수 없이 둘 다 변수인 경우(p.306), 인덱스 레인지 스캔과 풀 테이블 스캔 중에서 어느 것이 효율적일지 판단 할 수 없게 된다.
+	* 이때 매 레코드마다 인덱스 레인지 스
 * **Scanned N databases(MySQL 5.1 부터)**
 * **Select tsbels optimized away**
 * **Skiped_open_table, Open_frm_only, Open_trigger_only, Open_full_table(MySQL 5.1 부터)**
@@ -235,7 +236,7 @@ SELECT * FROM dept_emo WHERE from_date>='2002-07-01';
 ### 6.2.12 EXPLAIN EXTENDED(추가 옵티마이저 정보)
 ### 6.2.13 EXPLAIN PARTITIONS(Partitions 칼럼)
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTU5NTIyMTgwMywyOTQ1NTc0NTcsNTM1Mj
+eyJoaXN0b3J5IjpbMTI0NDk1MjkwNiwyOTQ1NTc0NTcsNTM1Mj
 A2ODY3LDEwODU5ODY2NiwtMTgxNTgzMzkxNCwyMDE0MTY3OTU4
 LC0xNzA3OTg1MDM0LC0xNjgwMjY0ODAzLC03NDIxMzYwNTMsLT
 g5MTI3NDE0NywxNTE1OTY2NTkwLDEzNjI5MzY1ODgsMTQxNDUy
