RealMysql/6. 실행 계획.md updated from https://stackedit.io/

--- a/RealMysql/6. 실행 계획.md
+++ b/RealMysql/6. 실행 계획.md
@@ -222,6 +222,7 @@ SELECT * FROM dept_emo WHERE from_date>='2002-07-01';
 	* 이때 매 레코드마다 인덱스 레인지 스캔을 체크한다는 의미.
 	* index map: 0x1은 테이블 중 인덱스로 사용할 후보를 의미한다. (p.308)
 * **Scanned N databases(MySQL 5.1 부터)**
+	* INFORMATION_SCHEMA DB MySQL 서버 내에 존재하는 DB 메타 정보(테이블, 칼럼, 인덱스 등)를 모아둔 DB.
 	* 
 * **Select tsbels optimized away**
 * **Skiped_open_table, Open_frm_only, Open_trigger_only, Open_full_table(MySQL 5.1 부터)**
@@ -238,11 +239,11 @@ SELECT * FROM dept_emo WHERE from_date>='2002-07-01';
 ### 6.2.12 EXPLAIN EXTENDED(추가 옵티마이저 정보)
 ### 6.2.13 EXPLAIN PARTITIONS(Partitions 칼럼)
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTEwNzQ4MDAzNzAsMjk0NTU3NDU3LDUzNT
-IwNjg2NywxMDg1OTg2NjYsLTE4MTU4MzM5MTQsMjAxNDE2Nzk1
-OCwtMTcwNzk4NTAzNCwtMTY4MDI2NDgwMywtNzQyMTM2MDUzLC
-04OTEyNzQxNDcsMTUxNTk2NjU5MCwxMzYyOTM2NTg4LDE0MTQ1
-MjYzNjUsMTMxNDMzMTI0OSwxODc5OTk0NTUzLC0xNDkwMjQ4Nz
-Y0LC0xNzI3NTc0NDQxLDE1NDA4ODE4NDEsMTA3NzAzNjEwOCwt
-MTA1OTM4NTQ0XX0=
+eyJoaXN0b3J5IjpbLTk5NjEzOTk2OCwyOTQ1NTc0NTcsNTM1Mj
+A2ODY3LDEwODU5ODY2NiwtMTgxNTgzMzkxNCwyMDE0MTY3OTU4
+LC0xNzA3OTg1MDM0LC0xNjgwMjY0ODAzLC03NDIxMzYwNTMsLT
+g5MTI3NDE0NywxNTE1OTY2NTkwLDEzNjI5MzY1ODgsMTQxNDUy
+NjM2NSwxMzE0MzMxMjQ5LDE4Nzk5OTQ1NTMsLTE0OTAyNDg3Nj
+QsLTE3Mjc1NzQ0NDEsMTU0MDg4MTg0MSwxMDc3MDM2MTA4LC0x
+MDU5Mzg1NDRdfQ==
 -->
