--- a/RealMysql/6. 실행 계획.md
+++ b/RealMysql/6. 실행 계획.md
@@ -224,10 +224,11 @@ SELECT * FROM dept_emo WHERE from_date>='2002-07-01';
 * **Scanned N databases(MySQL 5.1 부터)**
 	* INFORMATION_SCHEMA DB MySQL 서버 내에 존재하는 DB 메타 정보(테이블, 칼럼, 인덱스 등)를 모아둔 DB.
 	* 5.1 부터 개선된 조회 방법을 통해 메타 정보를 검색할 경우 칼럼에 표시된다.
-		* N : 0 특정 테이블의 정보만 요청됨
-		* N : 1
-		* N : ALL
+		* N : 0 특정 테이블의 정보만 요청 됨.
+		* N : 1 특정 데이터베이스내의 모든 스키마 정보가 요청 됨.
+		* N : ALL MySQL 서버 내의 모든 스키마 정보를 읽음.
 * **Select tsbels optimized away**
+	* 
 * **Skiped_open_table, Open_frm_only, Open_trigger_only, Open_full_table(MySQL 5.1 부터)**
 * **unique row not found (MySQL 5.1 부터)**
 * **Using filesort**
@@ -242,7 +243,7 @@ SELECT * FROM dept_emo WHERE from_date>='2002-07-01';
 ### 6.2.12 EXPLAIN EXTENDED(추가 옵티마이저 정보)
 ### 6.2.13 EXPLAIN PARTITIONS(Partitions 칼럼)
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTE5MzkwMjI1MzYsMjk0NTU3NDU3LDUzNT
+eyJoaXN0b3J5IjpbLTEzMTMzMTQwMjAsMjk0NTU3NDU3LDUzNT
 IwNjg2NywxMDg1OTg2NjYsLTE4MTU4MzM5MTQsMjAxNDE2Nzk1
 OCwtMTcwNzk4NTAzNCwtMTY4MDI2NDgwMywtNzQyMTM2MDUzLC
 04OTEyNzQxNDcsMTUxNTk2NjU5MCwxMzYyOTM2NTg4LDE0MTQ1
