--- a/RealMysql/6. 실행 계획.md
+++ b/RealMysql/6. 실행 계획.md
@@ -230,6 +230,7 @@ SELECT * FROM dept_emo WHERE from_date>='2002-07-01';
 * **Select tsbels optimized away**
 	* MIN() 또는 MAX() 만 SELECT 절에 사용되거나 또는 GROUP BY로 MIN() , AX()를 조회하는 쿼리가 적절한 인덱스를 사용할 수 없을 때 인덱스를 오름차순 또는 내림차순으로 1건만 읽는 형태의 최적화.(p319)
 * **Skiped_open_table, Open_frm_only, Open_trigger_only, Open_full_table(MySQL 5.1 부터)**
+	* INFORMATION_SCHEMA DB의 메타 정보를 조회하는 SELECT 쿼리의 실행 계획에서만 표시되는 내용.
 	* 
 * **unique row not found (MySQL 5.1 부터)**
 * **Using filesort**
@@ -244,11 +245,11 @@ SELECT * FROM dept_emo WHERE from_date>='2002-07-01';
 ### 6.2.12 EXPLAIN EXTENDED(추가 옵티마이저 정보)
 ### 6.2.13 EXPLAIN PARTITIONS(Partitions 칼럼)
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbMjA4OTk0MjAyNiwtMTMxMzMxNDAyMCwyOT
-Q1NTc0NTcsNTM1MjA2ODY3LDEwODU5ODY2NiwtMTgxNTgzMzkx
-NCwyMDE0MTY3OTU4LC0xNzA3OTg1MDM0LC0xNjgwMjY0ODAzLC
-03NDIxMzYwNTMsLTg5MTI3NDE0NywxNTE1OTY2NTkwLDEzNjI5
-MzY1ODgsMTQxNDUyNjM2NSwxMzE0MzMxMjQ5LDE4Nzk5OTQ1NT
-MsLTE0OTAyNDg3NjQsLTE3Mjc1NzQ0NDEsMTU0MDg4MTg0MSwx
-MDc3MDM2MTA4XX0=
+eyJoaXN0b3J5IjpbLTIwMDM3MTAyMzIsLTEzMTMzMTQwMjAsMj
+k0NTU3NDU3LDUzNTIwNjg2NywxMDg1OTg2NjYsLTE4MTU4MzM5
+MTQsMjAxNDE2Nzk1OCwtMTcwNzk4NTAzNCwtMTY4MDI2NDgwMy
+wtNzQyMTM2MDUzLC04OTEyNzQxNDcsMTUxNTk2NjU5MCwxMzYy
+OTM2NTg4LDE0MTQ1MjYzNjUsMTMxNDMzMTI0OSwxODc5OTk0NT
+UzLC0xNDkwMjQ4NzY0LC0xNzI3NTc0NDQxLDE1NDA4ODE4NDEs
+MTA3NzAzNjEwOF19
 -->
