RealMysql/6. 실행 계획.md updated from https://stackedit.io/

--- a/RealMysql/6. 실행 계획.md
+++ b/RealMysql/6. 실행 계획.md
@@ -229,10 +229,13 @@ SELECT * FROM dept_emo WHERE from_date>='2002-07-01';
 		* N : ALL MySQL 서버 내의 모든 스키마 정보를 읽음.
 * **Select tsbels optimized away**
 	* MIN() 또는 MAX() 만 SELECT 절에 사용되거나 또는 GROUP BY로 MIN() , AX()를 조회하는 쿼리가 적절한 인덱스를 사용할 수 없을 때 인덱스를 오름차순 또는 내림차순으로 1건만 읽는 형태의 최적화.(p319)
-* **  (MySQL 5.1 부터)**
+* **Skiped_open_table, Open_frm_only, Open_trigger_only, Open_full_table(MySQL 5.1 부터)**
 	* INFORMATION_SCHEMA DB의 메타 정보를 조회하는 SELECT 쿼리의 실행 계획에서만 표시되는 내용.
 	* 테이블의 메타 정보가 저장된 파일(.FRM)과 트리거가 저장된 파일(.TRG) 또는 데이터 파일 중에서 필요한 파일만 읽었는지 또는 불가피하게 모든 파일을 읽었는지 등의 정보를 보여준다.
-		* 
+		* Skiped_open_table : 테이블의 메타 정보가 저장된 파일을 별도로 읽을 필요 없음.
+		* Open_frm_only : 메타 정보가 저장된 파일(.FRM)만 읽음
+		* Open_trigger_only : 트리거 정보가 저장된 파일(.TRG)만 읽음
+		* Open_full_table
 * **unique row not found (MySQL 5.1 부터)**
 * **Using filesort**
 * **Using index(커버링 인덱스)**
@@ -246,11 +249,11 @@ SELECT * FROM dept_emo WHERE from_date>='2002-07-01';
 ### 6.2.12 EXPLAIN EXTENDED(추가 옵티마이저 정보)
 ### 6.2.13 EXPLAIN PARTITIONS(Partitions 칼럼)
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbNDY4NzQ0NDIwLC0xMzEzMzE0MDIwLDI5ND
-U1NzQ1Nyw1MzUyMDY4NjcsMTA4NTk4NjY2LC0xODE1ODMzOTE0
-LDIwMTQxNjc5NTgsLTE3MDc5ODUwMzQsLTE2ODAyNjQ4MDMsLT
-c0MjEzNjA1MywtODkxMjc0MTQ3LDE1MTU5NjY1OTAsMTM2Mjkz
-NjU4OCwxNDE0NTI2MzY1LDEzMTQzMzEyNDksMTg3OTk5NDU1My
-wtMTQ5MDI0ODc2NCwtMTcyNzU3NDQ0MSwxNTQwODgxODQxLDEw
-NzcwMzYxMDhdfQ==
+eyJoaXN0b3J5IjpbLTE3MDU1Mzk3NDEsLTEzMTMzMTQwMjAsMj
+k0NTU3NDU3LDUzNTIwNjg2NywxMDg1OTg2NjYsLTE4MTU4MzM5
+MTQsMjAxNDE2Nzk1OCwtMTcwNzk4NTAzNCwtMTY4MDI2NDgwMy
+wtNzQyMTM2MDUzLC04OTEyNzQxNDcsMTUxNTk2NjU5MCwxMzYy
+OTM2NTg4LDE0MTQ1MjYzNjUsMTMxNDMzMTI0OSwxODc5OTk0NT
+UzLC0xNDkwMjQ4NzY0LC0xNzI3NTc0NDQxLDE1NDA4ODE4NDEs
+MTA3NzAzNjEwOF19
 -->
