RealMysql/6. 실행 계획.md updated from https://stackedit.io/

--- a/RealMysql/6. 실행 계획.md
+++ b/RealMysql/6. 실행 계획.md
@@ -237,8 +237,8 @@ SELECT * FROM dept_emo WHERE from_date>='2002-07-01';
 		* Open_trigger_only : 트리거 정보가 저장된 파일(.TRG)만 읽음
 		* Open_full_table : 최적화되지 못해서 모두 읽음.
 * **unique row not found (MySQL 5.1 부터)**
-	* 
-* **Using filesort**
+	* 두개의 테이블이 각각 유니크 칼럼으로 아우터 
+* **Using file sort**
 * **Using index(커버링 인덱스)**
 * **Using index for group-by**
 * **Using join buffer(MySQL 5.1 부터)**
@@ -250,11 +250,11 @@ SELECT * FROM dept_emo WHERE from_date>='2002-07-01';
 ### 6.2.12 EXPLAIN EXTENDED(추가 옵티마이저 정보)
 ### 6.2.13 EXPLAIN PARTITIONS(Partitions 칼럼)
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbODY4MDY3OTMyLC0xMzEzMzE0MDIwLDI5ND
-U1NzQ1Nyw1MzUyMDY4NjcsMTA4NTk4NjY2LC0xODE1ODMzOTE0
-LDIwMTQxNjc5NTgsLTE3MDc5ODUwMzQsLTE2ODAyNjQ4MDMsLT
-c0MjEzNjA1MywtODkxMjc0MTQ3LDE1MTU5NjY1OTAsMTM2Mjkz
-NjU4OCwxNDE0NTI2MzY1LDEzMTQzMzEyNDksMTg3OTk5NDU1My
-wtMTQ5MDI0ODc2NCwtMTcyNzU3NDQ0MSwxNTQwODgxODQxLDEw
-NzcwMzYxMDhdfQ==
+eyJoaXN0b3J5IjpbMjY3NDU3MjAsLTEzMTMzMTQwMjAsMjk0NT
+U3NDU3LDUzNTIwNjg2NywxMDg1OTg2NjYsLTE4MTU4MzM5MTQs
+MjAxNDE2Nzk1OCwtMTcwNzk4NTAzNCwtMTY4MDI2NDgwMywtNz
+QyMTM2MDUzLC04OTEyNzQxNDcsMTUxNTk2NjU5MCwxMzYyOTM2
+NTg4LDE0MTQ1MjYzNjUsMTMxNDMzMTI0OSwxODc5OTk0NTUzLC
+0xNDkwMjQ4NzY0LC0xNzI3NTc0NDQxLDE1NDA4ODE4NDEsMTA3
+NzAzNjEwOF19
 -->
