--- a/RealMysql/6. 실행 계획.md
+++ b/RealMysql/6. 실행 계획.md
@@ -237,8 +237,10 @@ SELECT * FROM dept_emo WHERE from_date>='2002-07-01';
 		* Open_trigger_only : 트리거 정보가 저장된 파일(.TRG)만 읽음
 		* Open_full_table : 최적화되지 못해서 모두 읽음.
 * **unique row not found (MySQL 5.1 부터)**
-	* 두개의 테이블이 각각 유니크 칼럼으로 아우터 
+	* 두개의 테이블이 각각 유니크 칼럼으로 아우터 조인을 수행하는 쿼리에서 아우터 테이블에 일치하는 레코드가 존재하지 않을 때 표시.
 * **Using file sort**
+	* ORDERED BY 처리가 인덱스를 사용하지 못할 때만 코멘트 표시.
+	* 
 * **Using index(커버링 인덱스)**
 * **Using index for group-by**
 * **Using join buffer(MySQL 5.1 부터)**
@@ -250,11 +252,11 @@ SELECT * FROM dept_emo WHERE from_date>='2002-07-01';
 ### 6.2.12 EXPLAIN EXTENDED(추가 옵티마이저 정보)
 ### 6.2.13 EXPLAIN PARTITIONS(Partitions 칼럼)
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbMjY3NDU3MjAsLTEzMTMzMTQwMjAsMjk0NT
-U3NDU3LDUzNTIwNjg2NywxMDg1OTg2NjYsLTE4MTU4MzM5MTQs
-MjAxNDE2Nzk1OCwtMTcwNzk4NTAzNCwtMTY4MDI2NDgwMywtNz
-QyMTM2MDUzLC04OTEyNzQxNDcsMTUxNTk2NjU5MCwxMzYyOTM2
-NTg4LDE0MTQ1MjYzNjUsMTMxNDMzMTI0OSwxODc5OTk0NTUzLC
-0xNDkwMjQ4NzY0LC0xNzI3NTc0NDQxLDE1NDA4ODE4NDEsMTA3
-NzAzNjEwOF19
+eyJoaXN0b3J5IjpbLTE1NDQ2NzEwNzQsLTEzMTMzMTQwMjAsMj
+k0NTU3NDU3LDUzNTIwNjg2NywxMDg1OTg2NjYsLTE4MTU4MzM5
+MTQsMjAxNDE2Nzk1OCwtMTcwNzk4NTAzNCwtMTY4MDI2NDgwMy
+wtNzQyMTM2MDUzLC04OTEyNzQxNDcsMTUxNTk2NjU5MCwxMzYy
+OTM2NTg4LDE0MTQ1MjYzNjUsMTMxNDMzMTI0OSwxODc5OTk0NT
+UzLC0xNDkwMjQ4NzY0LC0xNzI3NTc0NDQxLDE1NDA4ODE4NDEs
+MTA3NzAzNjEwOF19
 -->
