RealMysql/6. 실행 계획.md updated from https://stackedit.io/

--- a/RealMysql/6. 실행 계획.md
+++ b/RealMysql/6. 실행 계획.md
@@ -240,7 +240,8 @@ SELECT * FROM dept_emo WHERE from_date>='2002-07-01';
 	* 두개의 테이블이 각각 유니크 칼럼으로 아우터 조인을 수행하는 쿼리에서 아우터 테이블에 일치하는 레코드가 존재하지 않을 때 표시.
 * **Using file sort**
 	* ORDERED BY 처리가 인덱스를 사용하지 못할 때만 코멘트 표시.
-	* 
+	* 조회된 레코드를 정렬용 메모리 버퍼에 복사해 퀵 소트 알고리즘을 수행한다.
+	* 해당 메세지가 출력되는 쿼리는 많은 부하를 일으키기 때문에 쿼리를 튜닝하거나 인덱스를 생성하는 것이 좋다
 * **Using index(커버링 인덱스)**
 * **Using index for group-by**
 * **Using join buffer(MySQL 5.1 부터)**
@@ -252,11 +253,11 @@ SELECT * FROM dept_emo WHERE from_date>='2002-07-01';
 ### 6.2.12 EXPLAIN EXTENDED(추가 옵티마이저 정보)
 ### 6.2.13 EXPLAIN PARTITIONS(Partitions 칼럼)
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTE1NDQ2NzEwNzQsLTEzMTMzMTQwMjAsMj
-k0NTU3NDU3LDUzNTIwNjg2NywxMDg1OTg2NjYsLTE4MTU4MzM5
-MTQsMjAxNDE2Nzk1OCwtMTcwNzk4NTAzNCwtMTY4MDI2NDgwMy
-wtNzQyMTM2MDUzLC04OTEyNzQxNDcsMTUxNTk2NjU5MCwxMzYy
-OTM2NTg4LDE0MTQ1MjYzNjUsMTMxNDMzMTI0OSwxODc5OTk0NT
-UzLC0xNDkwMjQ4NzY0LC0xNzI3NTc0NDQxLDE1NDA4ODE4NDEs
-MTA3NzAzNjEwOF19
+eyJoaXN0b3J5IjpbNDA2MDkyODEzLC0xMzEzMzE0MDIwLDI5ND
+U1NzQ1Nyw1MzUyMDY4NjcsMTA4NTk4NjY2LC0xODE1ODMzOTE0
+LDIwMTQxNjc5NTgsLTE3MDc5ODUwMzQsLTE2ODAyNjQ4MDMsLT
+c0MjEzNjA1MywtODkxMjc0MTQ3LDE1MTU5NjY1OTAsMTM2Mjkz
+NjU4OCwxNDE0NTI2MzY1LDEzMTQzMzEyNDksMTg3OTk5NDU1My
+wtMTQ5MDI0ODc2NCwtMTcyNzU3NDQ0MSwxNTQwODgxODQxLDEw
+NzcwMzYxMDhdfQ==
 -->
